# cpp-fraud-inference

./: .gitignore  CMakeLists.txt  README.md  metrics.json
data/: sample_transactions.csv
models/: fraud_model.onnx
python/: benchmark_python.py  train_export_model.py
src/: main.cpp
